--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
